# playing-with-opengl

./: CMakeLists.txt  LICENSE.md  README.md
lib/glbinding-2.1.1/: CMakeLists.txt
shaders/: simplefragment.glsl  simplevertex.glsl
src/: controls.cpp  controls.hpp  image.cpp  image.hpp  main.cpp  shader.cpp  shader.hpp
